have played with dom manipulation

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -28,13 +28,14 @@
 
 <body>
     <div class="box" id="container">
+        <button id="changeBg">Change Background Color</button>
         <h2 id="heading">Introduction : DOM Manipulation</h2>
         <ul id="list-group">
             <li class="list-item">Lorem ipsum dolor sit.</li>
             <li class="list-item">Ea eum ut consequatur.</li>
             <li class="list-item">Nobis quam earum et?</li>
         </ul>
-        <button id="btn">Click Me</button>
+        <button id="addBtn">Click Me</button>
         <br><br>
         <input type="text" id="name">
         <p id="showName"></p>
